learning-hub.html

--- a/learning-hub.html
+++ b/learning-hub.html
@@ -2,33 +2,101 @@
 <meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/>
 <title>📚 Learning Hub — Compass AI Flow</title>
 <link rel="stylesheet" href="assets/styles.css"/></head><body>
-<div class="header"><div class="header-inner"><button class="burger">☰</button><div class="logo"><img src="assets/logo.svg"/></div></div></div>
-<div class="bokeh"></div><aside class="sidebar"><div class="side-title">Навигация</div>
-<a class="side-link" href="index.html">🏠 Главная</a><a class="side-link" href="assistant-store.html">🛍 Assistant Store</a>
-<a class="side-link" href="learning-hub.html">📚 Learning Hub</a><a class="side-link" href="content-lab.html">🎨 Content Lab</a></aside><div class="overlay"></div>
+<div class="header"><div class="header-inner"><button class="burger">☰</button><div class="logo"><img src="assets/logo.svg" alt="logo"/></div></div></div>
+<div class="bokeh"></div>
+<aside class="sidebar"><div class="side-title">Навигация</div>
+  <a class="side-link" href="index.html">🏠 Главная</a>
+  <a class="side-link" href="assistant-store.html">🛍 Assistant Store</a>
+  <a class="side-link" href="learning-hub.html">📚 Learning Hub</a>
+  <a class="side-link" href="content-lab.html">🎨 Content Lab</a>
+</aside>
+<div class="overlay"></div>
+
 <div class="container">
   <div class="section"><h2>📚 Бесплатные мини-учебники</h2>
     <div class="grid">
+
+      <!-- Каждая карточка теперь ведёт на HTML-версию гайда -->
       <div class="card"><h3>Начало работы с GPT</h3><p>Регистрация, Custom Instructions, первые промпты.</p>
-        <div class="actions"><a class="btn primary" href="downloads/guide-gpt.pdf">📥 PDF</a><a class="btn" href="downloads/guide-gpt.epub">📱 ePub</a></div></div>
+        <div class="actions">
+          <a class="btn primary" href="guide-gpt.html">Открыть гайд →</a>
+          <span class="btn" style="opacity:.45; pointer-events:none">📥 PDF скоро</span>
+          <span class="btn" style="opacity:.45; pointer-events:none">📱 ePub скоро</span>
+        </div>
+      </div>
+
       <div class="card"><h3>Начало работы с Claude</h3><p>Длинные тексты, тон ответов.</p>
-        <div class="actions"><a class="btn primary" href="downloads/guide-claude.pdf">📥 PDF</a><a class="btn" href="downloads/guide-claude.epub">📱 ePub</a></div></div>
-      <div class="card"><h3>Perplexity</h3><p>Поиск с источниками.</p>
-        <div class="actions"><a class="btn primary" href="downloads/guide-perplexity.pdf">📥 PDF</a><a class="btn" href="downloads/guide-perplexity.epub">📱 ePub</a></div></div>
-      <div class="card"><h3>Gemini</h3><p>Вход, интеграции, первые шаги.</p>
-        <div class="actions"><a class="btn primary" href="downloads/guide-gemini.pdf">📥 PDF</a><a class="btn" href="downloads/guide-gemini.epub">📱 ePub</a></div></div>
+        <div class="actions">
+          <a class="btn primary" href="guide-claude.html">Открыть гайд →</a>
+          <span class="btn" style="opacity:.45; pointer-events:none">📥 PDF скоро</span>
+          <span class="btn" style="opacity:.45; pointer-events:none">📱 ePub скоро</span>
+        </div>
+      </div>
+
+      <div class="card"><h3>Начало работы с Perplexity</h3><p>Поиск с источниками.</p>
+        <div class="actions">
+          <a class="btn primary" href="guide-perplexity.html">Открыть гайд →</a>
+          <span class="btn" style="opacity:.45; pointer-events:none">📥 PDF скоро</span>
+          <span class="btn" style="opacity:.45; pointer-events:none">📱 ePub скоро</span>
+        </div>
+      </div>
+
+      <div class="card"><h3>Начало работы с Gemini</h3><p>Вход, интеграции, первые шаги.</p>
+        <div class="actions">
+          <a class="btn primary" href="guide-gemini.html">Открыть гайд →</a>
+          <span class="btn" style="opacity:.45; pointer-events:none">📥 PDF скоро</span>
+          <span class="btn" style="opacity:.45; pointer-events:none">📱 ePub скоро</span>
+        </div>
+      </div>
+
       <div class="card"><h3>Midjourney</h3><p>Discord, /imagine, вариации.</p>
-        <div class="actions"><a class="btn primary" href="downloads/guide-midjourney.pdf">📥 PDF</a><a class="btn" href="downloads/guide-midjourney.epub">📱 ePub</a></div></div>
+        <div class="actions">
+          <a class="btn primary" href="guide-midjourney.html">Открыть гайд →</a>
+          <span class="btn" style="opacity:.45; pointer-events:none">📥 PDF скоро</span>
+          <span class="btn" style="opacity:.45; pointer-events:none">📱 ePub скоро</span>
+        </div>
+      </div>
+
       <div class="card"><h3>Leonardo</h3><p>Модели, стили, upscale.</p>
-        <div class="actions"><a class="btn primary" href="downloads/guide-leonardo.pdf">📥 PDF</a><a class="btn" href="downloads/guide-leonardo.epub">📱 ePub</a></div></div>
+        <div class="actions">
+          <a class="btn primary" href="guide-leonardo.html">Открыть гайд →</a>
+          <span class="btn" style="opacity:.45; pointer-events:none">📥 PDF скоро</span>
+          <span class="btn" style="opacity:.45; pointer-events:none">📱 ePub скоро</span>
+        </div>
+      </div>
+
       <div class="card"><h3>Runway</h3><p>Gen-2, монтаж, экспорт.</p>
-        <div class="actions"><a class="btn primary" href="downloads/guide-runway.pdf">📥 PDF</a><a class="btn" href="downloads/guide-runway.epub">📱 ePub</a></div></div>
+        <div class="actions">
+          <a class="btn primary" href="guide-runway.html">Открыть гайд →</a>
+          <span class="btn" style="opacity:.45; pointer-events:none">📥 PDF скоро</span>
+          <span class="btn" style="opacity:.45; pointer-events:none">📱 ePub скоро</span>
+        </div>
+      </div>
+
       <div class="card"><h3>ElevenLabs</h3><p>Голоса, клоны, мультиязык.</p>
-        <div class="actions"><a class="btn primary" href="downloads/guide-elevenlabs.pdf">📥 PDF</a><a class="btn" href="downloads/guide-elevenlabs.epub">📱 ePub</a></div></div>
+        <div class="actions">
+          <a class="btn primary" href="guide-elevenlabs.html">Открыть гайд →</a>
+          <span class="btn" style="opacity:.45; pointer-events:none">📥 PDF скоро</span>
+          <span class="btn" style="opacity:.45; pointer-events:none">📱 ePub скоро</span>
+        </div>
+      </div>
+
       <div class="card"><h3>Pika</h3><p>Text/Image-to-Video.</p>
-        <div class="actions"><a class="btn primary" href="downloads/guide-pika.pdf">📥 PDF</a><a class="btn" href="downloads/guide-pika.epub">📱 ePub</a></div></div>
+        <div class="actions">
+          <a class="btn primary" href="guide-pika.html">Открыть гайд →</a>
+          <span class="btn" style="opacity:.45; pointer-events:none">📥 PDF скоро</span>
+          <span class="btn" style="opacity:.45; pointer-events:none">📱 ePub скоро</span>
+        </div>
+      </div>
+
       <div class="card"><h3>Kling AI</h3><p>Реалистичные сцены.</p>
-        <div class="actions"><a class="btn primary" href="downloads/guide-klingai.pdf">📥 PDF</a><a class="btn" href="downloads/guide-klingai.epub">📱 ePub</a></div></div>
+        <div class="actions">
+          <a class="btn primary" href="guide-klingai.html">Открыть гайд →</a>
+          <span class="btn" style="opacity:.45; pointer-events:none">📥 PDF скоро</span>
+          <span class="btn" style="opacity:.45; pointer-events:none">📱 ePub скоро</span>
+        </div>
+      </div>
+
     </div>
   </div>
   <div class="footer">© 2025 Compass AI Flow — by Anna</div>
