--- a/index.html
+++ b/index.html
@@ -44,31 +44,99 @@
       </div>
     </div>
 
-    <!-- секции -->
-    <div class="section"><h2>🧠 Тексты и ассистенты</h2>
-      <div class="grid">
-        <div class="card">
-          <img class="logo" src="https://www.google.com/s2/favicons?domain=openai.com&sz=64" alt="ChatGPT"/>
-          <h3>ChatGPT</h3><p>Тексты, анализ, ассистент</p>
-          <div class="meta"><span class="tag">💵 Pro ~$20/mo</span><span class="tag free">🎁 Есть</span></div>
-          <div class="actions"><a class="btn" href="https://chat.openai.com/" target="_blank">Открыть</a>
-            <a class="btn primary" href="https://chat.openai.com/" target="_blank">Перейти →</a></div>
-        </div>
-        <div class="card">
-          <img class="logo" src="https://www.google.com/s2/favicons?domain=claude.ai&sz=64" alt="Claude"/>
-          <h3>Claude</h3><p>Мощный ассистент от Anthropic</p>
-          <div class="meta"><span class="tag">💵 Pro ~$20/mo</span><span class="tag free">🎁 Есть</span></div>
-          <div class="actions"><a class="btn" href="https://claude.ai/" target="_blank">Открыть</a>
-            <a class="btn primary" href="https://claude.ai/" target="_blank">Перейти →</a></div>
-        </div>
-        <div class="card">
-          <img class="logo" src="https://www.google.com/s2/favicons?domain=perplexity.ai&sz=64" alt="Perplexity"/>
-          <h3>Perplexity</h3><p>Поиск с ответами и источниками</p>
-          <div class="meta"><span class="tag">💵 Pro ~$20/mo</span><span class="tag free">🎁 Есть</span></div>
-          <div class="actions"><a class="btn" href="https://www.perplexity.ai/" target="_blank">Открыть</a>
-            <a class="btn primary" href="https://www.perplexity.ai/" target="_blank">Перейти →</a></div>
-        </div>
-      </div>
+<!-- 🧠 Тексты и ассистенты -->
+<div class="section"><h2>🧠 Тексты и ассистенты</h2>
+  <div class="grid">
+    <!-- ChatGPT -->
+    <div class="card">
+      <img class="logo" src="https://www.google.com/s2/favicons?domain=openai.com&sz=64" alt="ChatGPT"/>
+      <h3>ChatGPT</h3><p>Тексты, анализ, ассистент</p>
+      <div class="meta"><span class="tag">💵 Pro ~$20/mo</span><span class="tag free">🎁 Есть</span></div>
+      <div class="actions"><a class="btn" href="https://chat.openai.com/" target="_blank">Открыть</a>
+        <a class="btn primary" href="https://chat.openai.com/" target="_blank">Перейти →</a></div>
+    </div>
+    <!-- Claude -->
+    <div class="card">
+      <img class="logo" src="https://www.google.com/s2/favicons?domain=claude.ai&sz=64" alt="Claude"/>
+      <h3>Claude</h3><p>Мощный ассистент от Anthropic</p>
+      <div class="meta"><span class="tag">💵 Pro ~$20/mo</span><span class="tag free">🎁 Есть</span></div>
+      <div class="actions"><a class="btn" href="https://claude.ai/" target="_blank">Открыть</a>
+        <a class="btn primary" href="https://claude.ai/" target="_blank">Перейти →</a></div>
+    </div>
+    <!-- Perplexity -->
+    <div class="card">
+      <img class="logo" src="https://www.google.com/s2/favicons?domain=perplexity.ai&sz=64" alt="Perplexity"/>
+      <h3>Perplexity</h3><p>Поиск с ответами и источниками</p>
+      <div class="meta"><span class="tag">💵 Pro ~$20/mo</span><span class="tag free">🎁 Есть</span></div>
+      <div class="actions"><a class="btn" href="https://www.perplexity.ai/" target="_blank">Открыть</a>
+        <a class="btn primary" href="https://www.perplexity.ai/" target="_blank">Перейти →</a></div>
+    </div>
+    <!-- Gemini -->
+    <div class="card">
+      <img class="logo" src="https://www.google.com/s2/favicons?domain=google.com&sz=64" alt="Gemini"/>
+      <h3>Gemini</h3><p>Ассистент от Google</p>
+      <div class="meta"><span class="tag">💵 Adv ~$20/mo</span><span class="tag free">🎁 Есть</span></div>
+      <div class="actions"><a class="btn" href="https://gemini.google.com/" target="_blank">Открыть</a>
+        <a class="btn primary" href="https://gemini.google.com/" target="_blank">Перейти →</a></div>
+    </div>
+    <!-- Poe -->
+    <div class="card">
+      <img class="logo" src="https://www.google.com/s2/favicons?domain=poe.com&sz=64" alt="Poe"/>
+      <h3>Poe</h3><p>Много моделей в одном месте</p>
+      <div class="meta"><span class="tag">💵 Pro ~$20/mo</span><span class="tag free">🎁 Есть</span></div>
+      <div class="actions"><a class="btn" href="https://poe.com/" target="_blank">Открыть</a>
+        <a class="btn primary" href="https://poe.com/" target="_blank">Перейти →</a></div>
+    </div>
+    <!-- Syntx Telegram -->
+    <div class="card">
+      <img class="logo" src="https://www.google.com/s2/favicons?domain=telegram.org&sz=64" alt="Syntx"/>
+      <h3>Syntx (Telegram)</h3><p>Бот-ассистент в TG</p>
+      <div class="meta"><span class="tag">💵 Разное</span><span class="tag">🎁 Зависит</span></div>
+      <div class="actions"><a class="btn" href="https://t.me/" target="_blank">Открыть</a>
+        <a class="btn primary" href="https://t.me/" target="_blank">Перейти →</a></div>
+    </div>
+  </div>
+</div>
+
+<!-- 🎨 Картинки -->
+<div class="section"><h2>🎨 Картинки</h2>
+  <div class="grid">
+    <div class="card"><img class="logo" src="https://www.google.com/s2/favicons?domain=playgroundai.com&sz=64"/><h3>Playground</h3><p>Лёгкая генерация, стили</p><div class="meta"><span class="tag">💵 Pro ~15</span><span class="tag free">🎁 Есть</span></div><div class="actions"><a class="btn" href="https://playgroundai.com/" target="_blank">Открыть</a><a class="btn primary" href="https://playgroundai.com/" target="_blank">Перейти →</a></div></div>
+    <div class="card"><img class="logo" src="https://www.google.com/s2/favicons?domain=mage.space&sz=64"/><h3>Mage.space</h3><p>Просто и бесплатно (SDXL)</p><div class="meta"><span class="tag">💵 Pro ~8</span><span class="tag free">🎁 Есть</span></div><div class="actions"><a class="btn" href="https://www.mage.space/" target="_blank">Открыть</a><a class="btn primary" href="https://www.mage.space/" target="_blank">Перейти →</a></div></div>
+    <div class="card"><img class="logo" src="https://www.google.com/s2/favicons?domain=leonardo.ai&sz=64"/><h3>Leonardo</h3><p>Модели и стили</p><div class="meta"><span class="tag">💵 Pro ~10</span><span class="tag free">🎁 Есть</span></div><div class="actions"><a class="btn" href="https://leonardo.ai/" target="_blank">Открыть</a><a class="btn primary" href="https://leonardo.ai/" target="_blank">Перейти →</a></div></div>
+    <div class="card"><img class="logo" src="https://www.google.com/s2/favicons?domain=ideogram.ai&sz=64"/><h3>Ideogram</h3><p>Текст на картинках</p><div class="meta"><span class="tag">💵 Pro ~8</span><span class="tag free">🎁 Есть</span></div><div class="actions"><a class="btn" href="https://ideogram.ai/" target="_blank">Открыть</a><a class="btn primary" href="https://ideogram.ai/" target="_blank">Перейти →</a></div></div>
+    <div class="card"><img class="logo" src="https://www.google.com/s2/favicons?domain=midjourney.com&sz=64"/><h3>Midjourney</h3><p>Фотореализм</p><div class="meta"><span class="tag">💵 от 10</span><span class="tag">🎁 Нет</span></div><div class="actions"><a class="btn" href="https://www.midjourney.com/" target="_blank">Открыть</a><a class="btn primary" href="https://www.midjourney.com/" target="_blank">Перейти →</a></div></div>
+    <div class="card"><img class="logo" src="https://www.google.com/s2/favicons?domain=civitai.com&sz=64"/><h3>LoRA (CivitAI)</h3><p>Стили/персонажи</p><div class="meta"><span class="tag">💵 Бесплатно</span><span class="tag free">🎁 Да</span></div><div class="actions"><a class="btn" href="https://civitai.com/" target="_blank">Открыть</a><a class="btn primary" href="https://civitai.com/" target="_blank">Перейти →</a></div></div>
+  </div>
+</div>
+
+<!-- 🎥 Видео -->
+<div class="section"><h2>🎥 Видео</h2>
+  <div class="grid">
+    <div class="card"><img class="logo" src="https://www.google.com/s2/favicons?domain=runwayml.com&sz=64"/><h3>Runway</h3><p>Text/Image→Video</p><div class="meta"><span class="tag">💵 ~12</span><span class="tag free">🎁 Есть</span></div><div class="actions"><a class="btn" href="https://runwayml.com/" target="_blank">Открыть</a><a class="btn primary" href="https://runwayml.com/" target="_blank">Перейти →</a></div></div>
+    <div class="card"><img class="logo" src="https://www.google.com/s2/favicons?domain=pikalabs.com&sz=64"/><h3>Pika Labs</h3><p>Короткие клипы</p><div class="meta"><span class="tag">💵 ~10</span><span class="tag free">🎁 Есть</span></div><div class="actions"><a class="btn" href="https://www.pikalabs.com/" target="_blank">Открыть</a><a class="btn primary" href="https://www.pikalabs.com/" target="_blank">Перейти →</a></div></div>
+    <div class="card"><img class="logo" src="https://www.google.com/s2/favicons?domain=kaiber.ai&sz=64"/><h3>Kaiber</h3><p>Клипы/анимации</p><div class="meta"><span class="tag">💵 ~10</span><span class="tag free">🎁 Есть</span></div><div class="actions"><a class="btn" href="https://www.kaiber.ai/" target="_blank">Открыть</a><a class="btn primary" href="https://www.kaiber.ai/" target="_blank">Перейти →</a></div></div>
+    <div class="card"><img class="logo" src="https://www.google.com/s2/favicons?domain=klingai.com&sz=64"/><h3>Kling AI</h3><p>Реалистичное видео</p><div class="meta"><span class="tag">💵 —</span><span class="tag">🎁 Бета</span></div><div class="actions"><a class="btn" href="https://klingai.com/" target="_blank">Открыть</a><a class="btn primary" href="https://klingai.com/" target="_blank">Перейти →</a></div></div>
+  </div>
+</div>
+
+<!-- 🗣 Голос -->
+<div class="section"><h2>🗣 Голос</h2>
+  <div class="grid">
+    <div class="card"><img class="logo" src="https://www.google.com/s2/favicons?domain=elevenlabs.io&sz=64"/><h3>ElevenLabs</h3><p>Реалистичные голоса</p><div class="meta"><span class="tag">💵 от 5</span><span class="tag free">🎁 Демо</span></div><div class="actions"><a class="btn" href="https://elevenlabs.io/" target="_blank">Открыть</a><a class="btn primary" href="https://elevenlabs.io/" target="_blank">Перейти →</a></div></div>
+    <div class="card"><img class="logo" src="https://www.google.com/s2/favicons?domain=play.ht&sz=64"/><h3>Play.ht</h3><p>Голоса и дикторы</p><div class="meta"><span class="tag">💵 от 19</span><span class="tag">🎁 Демо</span></div><div class="actions"><a class="btn" href="https://play.ht/" target="_blank">Открыть</a><a class="btn primary" href="https://play.ht/" target="_blank">Перейти →</a></div></div>
+  </div>
+</div>
+
+<!-- 🚀 Инструменты -->
+<div class="section"><h2>🚀 Инструменты для работы</h2>
+  <div class="grid">
+    <div class="card"><img class="logo" src="https://www.google.com/s2/favicons?domain=huggingface.co&sz=64"/><h3>Hugging Face</h3><p>Модели и демки</p><div class="meta"><span class="tag">💵 Free</span><span class="tag free">🎁 Да</span></div><div class="actions"><a class="btn" href="https://huggingface.co/spaces" target="_blank">Открыть</a><a class="btn primary" href="https://huggingface.co/spaces" target="_blank">Перейти →</a></div></div>
+    <div class="card"><img class="logo" src="https://www.google.com/s2/favicons?domain=colab.research.google.com&sz=64"/><h3>Google Colab</h3><p>Онлайн-ноутбуки с GPU</p><div class="meta"><span class="tag">💵 Free/Pro+</span><span class="tag free">🎁 Да</span></div><div class="actions"><a class="btn" href="https://colab.research.google.com/" target="_blank">Открыть</a><a class="btn primary" href="https://colab.research.google.com/" target="_blank">Перейти →</a></div></div>
+    <div class="card"><img class="logo" src="https://www.google.com/s2/favicons?domain=replit.com&sz=64"/><h3>Replit</h3><p>Запуск кода/ботов</p><div class="meta"><span class="tag">💵 Free/Pro</span><span class="tag free">🎁 Да</span></div><div class="actions"><a class="btn" href="https://replit.com/" target="_blank">Открыть</a><a class="btn primary" href="https://replit.com/" target="_blank">Перейти →</a></div></div>
+    <div class="card"><img class="logo" src="https://www.google.com/s2/favicons?domain=notion.so&sz=64"/><h3>Notion AI</h3><p>Писать, планировать</p><div class="meta"><span class="tag">💵 от 8</span><span class="tag">🎁 Демо</span></div><div class="actions"><a class="btn" href="https://www.notion.so/product/ai" target="_blank">Открыть</a><a class="btn primary" href="https://www.notion.so/product/ai" target="_blank">Перейти →</a></div></div>
+  </div>
+</div>
     </div>
 
     <div class="section"><h2>🎨 Картинки</h2>
