learning-hub.html

--- a/learning-hub.html
+++ b/learning-hub.html
@@ -17,85 +17,138 @@
     <div class="grid">
 
       <!-- Каждая карточка теперь ведёт на HTML-версию гайда -->
-      <div class="card"><h3>Начало работы с GPT</h3><p>Регистрация, Custom Instructions, первые промпты.</p>
-        <div class="actions">
-          <a class="btn primary" href="guide-gpt.html">Открыть гайд →</a>
-          <span class="btn" style="opacity:.45; pointer-events:none">📥 PDF скоро</span>
-          <span class="btn" style="opacity:.45; pointer-events:none">📱 ePub скоро</span>
-        </div>
-      </div>
+     <div class="cover-luxe">
+  <div class="ribbon">Compass AI Flow — by Anna</div>
+  <div class="brand">
+    <img src="assets/logo.svg" alt="Compass AI Flow logo">
+    <div>
+      <div class="suptitle">Бесплатный мини-учебник</div>
+      <h1>Гайд: начало работы с ChatGPT (GPT)</h1>
+      <div class="meta">Регистрация, Custom Instructions, первые промпты. Обновлено: <span data-today></span></div>
+    </div>
+  </div>
+</div>
+<div class="print-actions">
+  <button class="print-btn">📥 Скачать PDF (печать страницы)</button>
+  <span class="small" style="opacity:.8">В печати выбери «Сохранить как PDF».</span>
+</div>
 
-      <div class="card"><h3>Начало работы с Claude</h3><p>Длинные тексты, тон ответов.</p>
-        <div class="actions">
-          <a class="btn primary" href="guide-claude.html">Открыть гайд →</a>
-          <span class="btn" style="opacity:.45; pointer-events:none">📥 PDF скоро</span>
-          <span class="btn" style="opacity:.45; pointer-events:none">📱 ePub скоро</span>
-        </div>
-      </div>
+      <div class="cover-luxe">
+  <div class="ribbon">Compass AI Flow — by Anna</div>
+  <div class="brand">
+    <img src="assets/logo.svg" alt="Compass AI Flow logo">
+    <div>
+      <div class="suptitle">Бесплатный мини-учебник</div>
+      <h1>Гайд: начало работы с Claude</h1>
+      <div class="meta">Длинные файлы, стиль ответов, персонализация. Обновлено: <span data-today></span></div>
+    </div>
+  </div>
+</div>
+<div class="print-actions"><button class="print-btn">📥 Скачать PDF</button><span class="small" style="opacity:.8">Печать → PDF</span></div>
 
-      <div class="card"><h3>Начало работы с Perplexity</h3><p>Поиск с источниками.</p>
-        <div class="actions">
-          <a class="btn primary" href="guide-perplexity.html">Открыть гайд →</a>
-          <span class="btn" style="opacity:.45; pointer-events:none">📥 PDF скоро</span>
-          <span class="btn" style="opacity:.45; pointer-events:none">📱 ePub скоро</span>
-        </div>
-      </div>
+      <div class="cover-luxe">
+  <div class="ribbon">Compass AI Flow — by Anna</div>
+  <div class="brand">
+    <img src="assets/logo.svg" alt="Compass AI Flow logo">
+    <div>
+      <div class="suptitle">Бесплатный мини-учебник</div>
+      <h1>Гайд: начало работы с Perplexity</h1>
+      <div class="meta">Поиск с источниками, Focus/ Copilot, коллекции. Обновлено: <span data-today></span></div>
+    </div>
+  </div>
+</div>
+<div class="print-actions"><button class="print-btn">📥 Скачать PDF</button><span class="small" style="opacity:.8">Печать → PDF</span></div>
 
-      <div class="card"><h3>Начало работы с Gemini</h3><p>Вход, интеграции, первые шаги.</p>
-        <div class="actions">
-          <a class="btn primary" href="guide-gemini.html">Открыть гайд →</a>
-          <span class="btn" style="opacity:.45; pointer-events:none">📥 PDF скоро</span>
-          <span class="btn" style="opacity:.45; pointer-events:none">📱 ePub скоро</span>
-        </div>
-      </div>
+      <div class="cover-luxe">
+  <div class="ribbon">Compass AI Flow — by Anna</div>
+  <div class="brand">
+    <img src="assets/logo.svg" alt="Compass AI Flow logo">
+    <div>
+      <div class="suptitle">Бесплатный мини-учебник</div>
+      <h1>Гайд: начало работы с Gemini</h1>
+      <div class="meta">Вход через Google, интеграции Workspace, первые шаги. Обновлено: <span data-today></span></div>
+    </div>
+  </div>
+</div>
+<div class="print-actions"><button class="print-btn">📥 Скачать PDF</button><span class="small" style="opacity:.8">Печать → PDF</span></div>
 
-      <div class="card"><h3>Midjourney</h3><p>Discord, /imagine, вариации.</p>
-        <div class="actions">
-          <a class="btn primary" href="guide-midjourney.html">Открыть гайд →</a>
-          <span class="btn" style="opacity:.45; pointer-events:none">📥 PDF скоро</span>
-          <span class="btn" style="opacity:.45; pointer-events:none">📱 ePub скоро</span>
-        </div>
-      </div>
+      <div class="cover-luxe">
+  <div class="ribbon">Compass AI Flow — by Anna</div>
+  <div class="brand">
+    <img src="assets/logo.svg" alt="Compass AI Flow logo">
+    <div>
+      <div class="suptitle">Бесплатный мини-учебник</div>
+      <h1>Гайд: начало работы с Midjourney</h1>
+      <div class="meta">Discord, /imagine, вариации и апскейл, референсы. Обновлено: <span data-today></span></div>
+    </div>
+  </div>
+</div>
+<div class="print-actions"><button class="print-btn">📥 Скачать PDF</button><span class="small" style="opacity:.8">Печать → PDF</span></div>
 
-      <div class="card"><h3>Leonardo</h3><p>Модели, стили, upscale.</p>
-        <div class="actions">
-          <a class="btn primary" href="guide-leonardo.html">Открыть гайд →</a>
-          <span class="btn" style="opacity:.45; pointer-events:none">📥 PDF скоро</span>
-          <span class="btn" style="opacity:.45; pointer-events:none">📱 ePub скоро</span>
-        </div>
-      </div>
+      <div class="cover-luxe">
+  <div class="ribbon">Compass AI Flow — by Anna</div>
+  <div class="brand">
+    <img src="assets/logo.svg" alt="Compass AI Flow logo">
+    <div>
+      <div class="suptitle">Бесплатный мини-учебник</div>
+      <h1>Гайд: начало работы с Leonardo</h1>
+      <div class="meta">Модели SDXL/Leonardo, стили, upscale, контроль. Обновлено: <span data-today></span></div>
+    </div>
+  </div>
+</div>
+<div class="print-actions"><button class="print-btn">📥 Скачать PDF</button><span class="small" style="opacity:.8">Печать → PDF</span></div>
+    
+      <div class="cover-luxe">
+  <div class="ribbon">Compass AI Flow — by Anna</div>
+  <div class="brand">
+    <img src="assets/logo.svg" alt="Compass AI Flow logo">
+    <div>
+      <div class="suptitle">Бесплатный мини-учебник</div>
+      <h1>Гайд: начало работы с Runway</h1>
+      <div class="meta">Gen-2, режимы, монтаж, экспорт проектов. Обновлено: <span data-today></span></div>
+    </div>
+  </div>
+</div>
+<div class="print-actions"><button class="print-btn">📥 Скачать PDF</button><span class="small" style="opacity:.8">Печать → PDF</span></div>
 
-      <div class="card"><h3>Runway</h3><p>Gen-2, монтаж, экспорт.</p>
-        <div class="actions">
-          <a class="btn primary" href="guide-runway.html">Открыть гайд →</a>
-          <span class="btn" style="opacity:.45; pointer-events:none">📥 PDF скоро</span>
-          <span class="btn" style="opacity:.45; pointer-events:none">📱 ePub скоро</span>
-        </div>
-      </div>
+      <div class="cover-luxe">
+  <div class="ribbon">Compass AI Flow — by Anna</div>
+  <div class="brand">
+    <img src="assets/logo.svg" alt="Compass AI Flow logo">
+    <div>
+      <div class="suptitle">Бесплатный мини-учебник</div>
+      <h1>Гайд: начало работы с ElevenLabs</h1>
+      <div class="meta">Голоса, клон, параметры, мультиязык, экспорт. Обновлено: <span data-today></span></div>
+    </div>
+  </div>
+</div>
+<div class="print-actions"><button class="print-btn">📥 Скачать PDF</button><span class="small" style="opacity:.8">Печать → PDF</span></div>
 
-      <div class="card"><h3>ElevenLabs</h3><p>Голоса, клоны, мультиязык.</p>
-        <div class="actions">
-          <a class="btn primary" href="guide-elevenlabs.html">Открыть гайд →</a>
-          <span class="btn" style="opacity:.45; pointer-events:none">📥 PDF скоро</span>
-          <span class="btn" style="opacity:.45; pointer-events:none">📱 ePub скоро</span>
-        </div>
-      </div>
+      <div class="cover-luxe">
+  <div class="ribbon">Compass AI Flow — by Anna</div>
+  <div class="brand">
+    <img src="assets/logo.svg" alt="Compass AI Flow logo">
+    <div>
+      <div class="suptitle">Бесплатный мини-учебник</div>
+      <h1>Гайд: начало работы с Pika Labs</h1>
+      <div class="meta">Text/Image-to-Video, параметры, апскейл, экспорт. Обновлено: <span data-today></span></div>
+    </div>
+  </div>
+</div>
+<div class="print-actions"><button class="print-btn">📥 Скачать PDF</button><span class="small" style="opacity:.8">Печать → PDF</span></div>
 
-      <div class="card"><h3>Pika</h3><p>Text/Image-to-Video.</p>
-        <div class="actions">
-          <a class="btn primary" href="guide-pika.html">Открыть гайд →</a>
-          <span class="btn" style="opacity:.45; pointer-events:none">📥 PDF скоро</span>
-          <span class="btn" style="opacity:.45; pointer-events:none">📱 ePub скоро</span>
-        </div>
-      </div>
-
-      <div class="card"><h3>Kling AI</h3><p>Реалистичные сцены.</p>
-        <div class="actions">
-          <a class="btn primary" href="guide-klingai.html">Открыть гайд →</a>
-          <span class="btn" style="opacity:.45; pointer-events:none">📥 PDF скоро</span>
-          <span class="btn" style="opacity:.45; pointer-events:none">📱 ePub скоро</span>
-        </div>
-      </div>
+      <div class="cover-luxe">
+  <div class="ribbon">Compass AI Flow — by Anna</div>
+  <div class="brand">
+    <img src="assets/logo.svg" alt="Compass AI Flow logo">
+    <div>
+      <div class="suptitle">Бесплатный мини-учебник</div>
+      <h1>Гайд: начало работы с Kling AI</h1>
+      <div class="meta">Доступ/очередь, реалистичные сцены, параметры, экспорт. Обновлено: <span data-today></span></div>
+    </div>
+  </div>
+</div>
+<div class="print-actions"><button class="print-btn">📥 Скачать PDF</button><span class="small" style="opacity:.8">Печать → PDF</span></div>
 
     </div>
   </div>
