--- a/learning-hub.html
+++ b/learning-hub.html
@@ -1,158 +1,215 @@
-<!doctype html><html lang="ru"><head>
-<meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>📚 Learning Hub — Compass AI Flow</title>
-<link rel="stylesheet" href="assets/styles.css"/></head><body>
-<div class="header"><div class="header-inner"><button class="burger">☰</button><div class="logo"><img src="assets/logo.svg" alt="logo"/></div></div></div>
-<div class="bokeh"></div>
-<aside class="sidebar"><div class="side-title">Навигация</div>
-  <a class="side-link" href="index.html">🏠 Главная</a>
-  <a class="side-link" href="assistant-store.html">🛍 Assistant Store</a>
-  <a class="side-link" href="learning-hub.html">📚 Learning Hub</a>
-  <a class="side-link" href="content-lab.html">🎨 Content Lab</a>
-</aside>
-<div class="overlay"></div>
+<!doctype html>
+<html lang="ru">
+<head>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <title>📚 Learning Hub — Compass AI Flow</title>
+  <link rel="stylesheet" href="assets/styles.css"/>
+  <style>
+    /* локальные правки именно для хаба */
+    .lhub .card { overflow: hidden; }
+    .lhub .cover {
+      position: relative; margin-bottom: 14px; padding: 20px;
+      border-radius: 18px;
+      background:
+        radial-gradient(120% 120% at 10% 0%, rgba(124,58,237,.18), rgba(6,182,212,.12) 45%, rgba(255,255,255,.06) 80%),
+        linear-gradient(180deg, rgba(255,255,255,.04), rgba(255,255,255,.02));
+      border: 1px solid rgba(255,255,255,.12);
+      backdrop-filter: blur(10px);
+    }
+    .lhub .cover .suptitle{letter-spacing:.12em;text-transform:uppercase;font-size:12px;color:#c7d2fe;opacity:.95}
+    .lhub .cover h3{margin:6px 0 8px;font-size:20px;line-height:1.25}
+    .lhub .cover .meta{color:#b6c2d9;font-size:13px}
+    .lhub .cover .mark{
+      position:absolute; right:14px; top:14px; padding:6px 10px; border-radius:999px;
+      border:1px solid rgba(139,92,246,.35);
+      background:linear-gradient(135deg, rgba(14,165,233,.16), rgba(139,92,246,.16));
+      font-size:12px;
+    }
+    .btn-row{display:flex;gap:10px;flex-wrap:wrap}
+    .btn.primary{min-width:180px; text-align:center}
+    .btn[aria-disabled="true"]{opacity:.45; pointer-events:none}
+  </style>
+</head>
+<body>
+  <!-- Шапка + сайдбар -->
+  <div class="header"><div class="header-inner">
+    <button class="burger" aria-label="menu">☰</button>
+    <div class="logo"><img src="assets/logo.svg" alt="Compass AI Flow"/></div>
+  </div></div>
+  <div class="bokeh"></div>
+  <aside class="sidebar" id="sidebar">
+    <div class="side-title">Навигация</div>
+    <a class="side-link" href="index.html">🏠 Главная</a>
+    <a class="side-link" href="assistant-store.html">🛍 Assistant Store</a>
+    <a class="side-link" href="learning-hub.html">📚 Learning Hub</a>
+    <a class="side-link" href="content-lab.html">🎨 Content Lab</a>
+  </aside>
+  <div class="overlay"></div>
 
-<div class="container">
-  <div class="section"><h2>📚 Бесплатные мини-учебники</h2>
-    <div class="grid">
+  <div class="container lhub">
+    <div class="section">
+      <h2>📚 Бесплатные мини-учебники</h2>
+      <div class="grid">
 
-      <!-- Каждая карточка теперь ведёт на HTML-версию гайда -->
-     <div class="cover-luxe">
-  <div class="ribbon">Compass AI Flow — by Anna</div>
-  <div class="brand">
-    <img src="assets/logo.svg" alt="Compass AI Flow logo">
-    <div>
-      <div class="suptitle">Бесплатный мини-учебник</div>
-      <h1>Гайд: начало работы с ChatGPT (GPT)</h1>
-      <div class="meta">Регистрация, Custom Instructions, первые промпты. Обновлено: <span data-today></span></div>
-    </div>
-  </div>
-</div>
-<div class="print-actions">
-  <button class="print-btn">📥 Скачать PDF (печать страницы)</button>
-  <span class="small" style="opacity:.8">В печати выбери «Сохранить как PDF».</span>
-</div>
+        <!-- GPT -->
+        <div class="card">
+          <div class="cover">
+            <span class="mark">Compass AI Flow — by Anna</span>
+            <div class="suptitle">Бесплатный мини-учебник</div>
+            <h3>Гайд: начало работы с ChatGPT (GPT)</h3>
+            <div class="meta">Регистрация, Custom Instructions, первые промпты. Обновлено: <span data-today></span></div>
+          </div>
+          <p>Открой онлайн-версию или скачай файл, когда будут готовы PDF/ePub.</p>
+          <div class="btn-row">
+            <a class="btn primary" href="guide-gpt.html">Открыть онлайн →</a>
+            <a class="btn" href="downloads/guide-gpt.pdf" aria-disabled="true">📘 PDF (скоро)</a>
+            <a class="btn" href="downloads/guide-gpt.epub" aria-disabled="true">📱 ePub (скоро)</a>
+          </div>
+        </div>
 
-      <div class="cover-luxe">
-  <div class="ribbon">Compass AI Flow — by Anna</div>
-  <div class="brand">
-    <img src="assets/logo.svg" alt="Compass AI Flow logo">
-    <div>
-      <div class="suptitle">Бесплатный мини-учебник</div>
-      <h1>Гайд: начало работы с Claude</h1>
-      <div class="meta">Длинные файлы, стиль ответов, персонализация. Обновлено: <span data-today></span></div>
-    </div>
-  </div>
-</div>
-<div class="print-actions"><button class="print-btn">📥 Скачать PDF</button><span class="small" style="opacity:.8">Печать → PDF</span></div>
+        <!-- Claude -->
+        <div class="card">
+          <div class="cover">
+            <span class="mark">Compass AI Flow — by Anna</span>
+            <div class="suptitle">Бесплатный мини-учебник</div>
+            <h3>Гайд: начало работы с Claude</h3>
+            <div class="meta">Длинные файлы, стиль ответов, персонализация. Обновлено: <span data-today></span></div>
+          </div>
+          <p>Онлайн-версия с шагами и картинками.</p>
+          <div class="btn-row">
+            <a class="btn primary" href="guide-claude.html">Открыть онлайн →</a>
+            <a class="btn" href="downloads/guide-claude.pdf" aria-disabled="true">📘 PDF (скоро)</a>
+            <a class="btn" href="downloads/guide-claude.epub" aria-disabled="true">📱 ePub (скоро)</a>
+          </div>
+        </div>
 
-      <div class="cover-luxe">
-  <div class="ribbon">Compass AI Flow — by Anna</div>
-  <div class="brand">
-    <img src="assets/logo.svg" alt="Compass AI Flow logo">
-    <div>
-      <div class="suptitle">Бесплатный мини-учебник</div>
-      <h1>Гайд: начало работы с Perplexity</h1>
-      <div class="meta">Поиск с источниками, Focus/ Copilot, коллекции. Обновлено: <span data-today></span></div>
-    </div>
-  </div>
-</div>
-<div class="print-actions"><button class="print-btn">📥 Скачать PDF</button><span class="small" style="opacity:.8">Печать → PDF</span></div>
+        <!-- Perplexity -->
+        <div class="card">
+          <div class="cover">
+            <span class="mark">Compass AI Flow — by Anna</span>
+            <div class="suptitle">Бесплатный мини-учебник</div>
+            <h3>Гайд: начало работы с Perplexity</h3>
+            <div class="meta">Поиск с источниками, Focus/Collections. Обновлено: <span data-today></span></div>
+          </div>
+          <div class="btn-row">
+            <a class="btn primary" href="guide-perplexity.html">Открыть онлайн →</a>
+            <a class="btn" href="downloads/guide-perplexity.pdf" aria-disabled="true">📘 PDF (скоро)</a>
+            <a class="btn" href="downloads/guide-perplexity.epub" aria-disabled="true">📱 ePub (скоро)</a>
+          </div>
+        </div>
 
-      <div class="cover-luxe">
-  <div class="ribbon">Compass AI Flow — by Anna</div>
-  <div class="brand">
-    <img src="assets/logo.svg" alt="Compass AI Flow logo">
-    <div>
-      <div class="suptitle">Бесплатный мини-учебник</div>
-      <h1>Гайд: начало работы с Gemini</h1>
-      <div class="meta">Вход через Google, интеграции Workspace, первые шаги. Обновлено: <span data-today></span></div>
-    </div>
-  </div>
-</div>
-<div class="print-actions"><button class="print-btn">📥 Скачать PDF</button><span class="small" style="opacity:.8">Печать → PDF</span></div>
+        <!-- Gemini -->
+        <div class="card">
+          <div class="cover">
+            <span class="mark">Compass AI Flow — by Anna</span>
+            <div class="suptitle">Бесплатный мини-учебник</div>
+            <h3>Гайд: начало работы с Gemini</h3>
+            <div class="meta">Вход через Google, интеграции Workspace. Обновлено: <span data-today></span></div>
+          </div>
+          <div class="btn-row">
+            <a class="btn primary" href="guide-gemini.html">Открыть онлайн →</a>
+            <a class="btn" href="downloads/guide-gemini.pdf" aria-disabled="true">📘 PDF (скоро)</a>
+            <a class="btn" href="downloads/guide-gemini.epub" aria-disabled="true">📱 ePub (скоро)</a>
+          </div>
+        </div>
 
-      <div class="cover-luxe">
-  <div class="ribbon">Compass AI Flow — by Anna</div>
-  <div class="brand">
-    <img src="assets/logo.svg" alt="Compass AI Flow logo">
-    <div>
-      <div class="suptitle">Бесплатный мини-учебник</div>
-      <h1>Гайд: начало работы с Midjourney</h1>
-      <div class="meta">Discord, /imagine, вариации и апскейл, референсы. Обновлено: <span data-today></span></div>
-    </div>
-  </div>
-</div>
-<div class="print-actions"><button class="print-btn">📥 Скачать PDF</button><span class="small" style="opacity:.8">Печать → PDF</span></div>
+        <!-- Midjourney -->
+        <div class="card">
+          <div class="cover">
+            <span class="mark">Compass AI Flow — by Anna</span>
+            <div class="suptitle">Бесплатный мини-учебник</div>
+            <h3>Гайд: начало работы с Midjourney</h3>
+            <div class="meta">Discord, /imagine, вариации, апскейл. Обновлено: <span data-today></span></div>
+          </div>
+          <div class="btn-row">
+            <a class="btn primary" href="guide-midjourney.html">Открыть онлайн →</a>
+            <a class="btn" href="downloads/guide-midjourney.pdf" aria-disabled="true">📘 PDF (скоро)</a>
+            <a class="btn" href="downloads/guide-midjourney.epub" aria-disabled="true">📱 ePub (скоро)</a>
+          </div>
+        </div>
 
-      <div class="cover-luxe">
-  <div class="ribbon">Compass AI Flow — by Anna</div>
-  <div class="brand">
-    <img src="assets/logo.svg" alt="Compass AI Flow logo">
-    <div>
-      <div class="suptitle">Бесплатный мини-учебник</div>
-      <h1>Гайд: начало работы с Leonardo</h1>
-      <div class="meta">Модели SDXL/Leonardo, стили, upscale, контроль. Обновлено: <span data-today></span></div>
-    </div>
-  </div>
-</div>
-<div class="print-actions"><button class="print-btn">📥 Скачать PDF</button><span class="small" style="opacity:.8">Печать → PDF</span></div>
-    
-      <div class="cover-luxe">
-  <div class="ribbon">Compass AI Flow — by Anna</div>
-  <div class="brand">
-    <img src="assets/logo.svg" alt="Compass AI Flow logo">
-    <div>
-      <div class="suptitle">Бесплатный мини-учебник</div>
-      <h1>Гайд: начало работы с Runway</h1>
-      <div class="meta">Gen-2, режимы, монтаж, экспорт проектов. Обновлено: <span data-today></span></div>
-    </div>
-  </div>
-</div>
-<div class="print-actions"><button class="print-btn">📥 Скачать PDF</button><span class="small" style="opacity:.8">Печать → PDF</span></div>
+        <!-- Leonardo -->
+        <div class="card">
+          <div class="cover">
+            <span class="mark">Compass AI Flow — by Anna</span>
+            <div class="suptitle">Бесплатный мини-учебник</div>
+            <h3>Гайд: начало работы с Leonardo</h3>
+            <div class="meta">Модели, стили, контроль, upscale. Обновлено: <span data-today></span></div>
+          </div>
+          <div class="btn-row">
+            <a class="btn primary" href="guide-leonardo.html">Открыть онлайн →</a>
+            <a class="btn" href="downloads/guide-leonardo.pdf" aria-disabled="true">📘 PDF (скоро)</a>
+            <a class="btn" href="downloads/guide-leonardo.epub" aria-disabled="true">📱 ePub (скоро)</a>
+          </div>
+        </div>
 
-      <div class="cover-luxe">
-  <div class="ribbon">Compass AI Flow — by Anna</div>
-  <div class="brand">
-    <img src="assets/logo.svg" alt="Compass AI Flow logo">
-    <div>
-      <div class="suptitle">Бесплатный мини-учебник</div>
-      <h1>Гайд: начало работы с ElevenLabs</h1>
-      <div class="meta">Голоса, клон, параметры, мультиязык, экспорт. Обновлено: <span data-today></span></div>
-    </div>
-  </div>
-</div>
-<div class="print-actions"><button class="print-btn">📥 Скачать PDF</button><span class="small" style="opacity:.8">Печать → PDF</span></div>
+        <!-- Runway -->
+        <div class="card">
+          <div class="cover">
+            <span class="mark">Compass AI Flow — by Anna</span>
+            <div class="suptitle">Бесплатный мини-учебник</div>
+            <h3>Гайд: начало работы с Runway</h3>
+            <div class="meta">Gen-2, монтаж, экспорт. Обновлено: <span data-today></span></div>
+          </div>
+          <div class="btn-row">
+            <a class="btn primary" href="guide-runway.html">Открыть онлайн →</a>
+            <a class="btn" href="downloads/guide-runway.pdf" aria-disabled="true">📘 PDF (скоро)</a>
+            <a class="btn" href="downloads/guide-runway.epub" aria-disabled="true">📱 ePub (скоро)</a>
+          </div>
+        </div>
 
-      <div class="cover-luxe">
-  <div class="ribbon">Compass AI Flow — by Anna</div>
-  <div class="brand">
-    <img src="assets/logo.svg" alt="Compass AI Flow logo">
-    <div>
-      <div class="suptitle">Бесплатный мини-учебник</div>
-      <h1>Гайд: начало работы с Pika Labs</h1>
-      <div class="meta">Text/Image-to-Video, параметры, апскейл, экспорт. Обновлено: <span data-today></span></div>
-    </div>
-  </div>
-</div>
-<div class="print-actions"><button class="print-btn">📥 Скачать PDF</button><span class="small" style="opacity:.8">Печать → PDF</span></div>
+        <!-- ElevenLabs -->
+        <div class="card">
+          <div class="cover">
+            <span class="mark">Compass AI Flow — by Anna</span>
+            <div class="suptitle">Бесплатный мини-учебник</div>
+            <h3>Гайд: начало работы с ElevenLabs</h3>
+            <div class="meta">Голоса, Voice Lab, клон, экспорт. Обновлено: <span data-today></span></div>
+          </div>
+          <div class="btn-row">
+            <a class="btn primary" href="guide-elevenlabs.html">Открыть онлайн →</a>
+            <a class="btn" href="downloads/guide-elevenlabs.pdf" aria-disabled="true">📘 PDF (скоро)</a>
+            <a class="btn" href="downloads/guide-elevenlabs.epub" aria-disabled="true">📱 ePub (скоро)</a>
+          </div>
+        </div>
 
-      <div class="cover-luxe">
-  <div class="ribbon">Compass AI Flow — by Anna</div>
-  <div class="brand">
-    <img src="assets/logo.svg" alt="Compass AI Flow logo">
-    <div>
-      <div class="suptitle">Бесплатный мини-учебник</div>
-      <h1>Гайд: начало работы с Kling AI</h1>
-      <div class="meta">Доступ/очередь, реалистичные сцены, параметры, экспорт. Обновлено: <span data-today></span></div>
-    </div>
-  </div>
-</div>
-<div class="print-actions"><button class="print-btn">📥 Скачать PDF</button><span class="small" style="opacity:.8">Печать → PDF</span></div>
+        <!-- Pika -->
+        <div class="card">
+          <div class="cover">
+            <span class="mark">Compass AI Flow — by Anna</span>
+            <div class="suptitle">Бесплатный мини-учебник</div>
+            <h3>Гайд: начало работы с Pika</h3>
+            <div class="meta">Text/Image→Video, параметры. Обновлено: <span data-today></span></div>
+          </div>
+          <div class="btn-row">
+            <a class="btn primary" href="guide-pika.html">Открыть онлайн →</a>
+            <a class="btn" href="downloads/guide-pika.pdf" aria-disabled="true">📘 PDF (скоро)</a>
+            <a class="btn" href="downloads/guide-pika.epub" aria-disabled="true">📱 ePub (скоро)</a>
+          </div>
+        </div>
 
+        <!-- KlingAI -->
+        <div class="card">
+          <div class="cover">
+            <span class="mark">Compass AI Flow — by Anna</span>
+            <div class="suptitle">Бесплатный мини-учебник</div>
+            <h3>Гайд: начало работы с Kling AI</h3>
+            <div class="meta">Доступ/очередь, реалистичные сцены. Обновлено: <span data-today></span></div>
+          </div>
+          <div class="btn-row">
+            <a class="btn primary" href="guide-klingai.html">Открыть онлайн →</a>
+            <a class="btn" href="downloads/guide-klingai.pdf" aria-disabled="true">📘 PDF (скоро)</a>
+            <a class="btn" href="downloads/guide-klingai.epub" aria-disabled="true">📱 ePub (скоро)</a>
+          </div>
+        </div>
+
+      </div>
     </div>
+
+    <div class="footer">© 2025 Compass AI Flow — by Anna</div>
   </div>
-  <div class="footer">© 2025 Compass AI Flow — by Anna</div>
-</div>
-<script src="app.js"></script>
-</body></html>
+
+  <script src="app.js"></script>
+</body>
+</html>
