learning-hub.html

--- a/learning-hub.html
+++ b/learning-hub.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>📚 Learning Hub — Compass AI Flow</title>
   <link rel="stylesheet" href="assets/styles.css"/>
-  <style>
+  <style> .lhub .cover .mark{ display:none !important; }
     /* локальные правки именно для хаба */
     .lhub .card { overflow: hidden; }
     .lhub .cover {
