--- a/learning-hub.html
+++ b/learning-hub.html
@@ -8,7 +8,7 @@
   <style> .lhub .cover .mark{ display:none !important; }
     /* локальные правки именно для хаба */
     .lhub .card { overflow: hidden; }
-    .lhub .cover {
+    .lhub .cover { padding:22px 20px; }
       position: relative; margin-bottom: 14px; padding: 20px;
       border-radius: 18px;
       background:
