assistant-store.html

--- a/assistant-store.html
+++ b/assistant-store.html
@@ -8,6 +8,61 @@
 <a class="side-link" href="learning-hub.html">📚 Learning Hub</a><a class="side-link" href="content-lab.html">🎨 Content Lab</a></aside><div class="overlay"></div>
 <div class="container">
   <div class="section"><h2>🛍 Магазин ассистентов (скоро)</h2>
+    <div class="section">
+  <h2>🛍 Assistant Store</h2>
+  <div class="notice small">Ассистенты на базе ChatGPT. Оплаты подключим позже (Stripe → Apple Pay/PayPal).</div>
+
+  <div class="grid">
+    <!-- Ассистент-переводчик -->
+    <div class="card">
+      <img class="logo" src="https://www.google.com/s2/favicons?domain=chatgpt.com&sz=64" alt="ChatGPT">
+      <h3>Ассистент-переводчик</h3>
+      <p>Перевод на нативный английский (UK/US) и украинский: сохраняет стиль, правит лексику и тон.</p>
+      <div class="meta">
+        <span class="tag free">🎁 Бесплатно</span>
+        <span class="tag">🌐 ChatGPT</span>
+      </div>
+      <div class="actions">
+        <a class="btn primary"
+           href="https://chatgpt.com/g/g-68a1bb11ce248191bac060fa37528a66-assistent-perevodchik"
+           target="_blank" rel="noopener">Открыть →</a>
+      </div>
+    </div>
+
+    <!-- Шаблон для следующих ассистентов (скопируй и замени поля) -->
+    <!--
+    <div class="card">
+      <img class="logo" src="https://www.google.com/s2/favicons?domain=chatgpt.com&sz=64" alt="ChatGPT">
+      <h3>Название ассистента</h3>
+      <p>Короткое описание: что делает и для кого.</p>
+      <div class="meta">
+        <span class="tag free">🎁 Бесплатно</span>  <!-- или <span class="tag">💵 от $…</span> -->
+        <span class="tag">🌐 ChatGPT</span>
+      </div>
+      <div class="actions">
+        <a class="btn primary" href="ПОЛНАЯ_ССЫЛКА_НА_АССИСТЕНТА" target="_blank" rel="noopener">Открыть →</a>
+      </div>
+
+      <!-- Veo 3 - Prompt -->
+<div class="card">
+  <img class="logo" src="https://www.google.com/s2/favicons?domain=chatgpt.com&sz=64" alt="ChatGPT">
+  <h3>Veo 3 – Prompt</h3>
+  <p>Создаёт идеальный промпт для твоих видео в Veo 3. Использует поиск, холст и генерацию изображений.</p>
+  <div class="meta">
+    <span class="tag free">🎁 Бесплатно</span>
+    <span class="tag">🌐 ChatGPT</span>
+  </div>
+  <div class="actions">
+    <a class="btn primary"
+       href="https://chatgpt.com/g/g-685cdafc71548191bd61570b7bcbbfec-veo-3-prompt"
+       target="_blank" rel="noopener">Открыть →</a>
+  </div>
+    
+    </div>
+    
+    -->
+  </div>
+</div>
     <div class="notice small">Подключим Stripe Checkout → Apple Pay/Google Pay и PayPal. После оплаты — авто-выдача ссылки/файла.</div>
   </div>
   <div class="footer">© 2025 Compass AI Flow — by Anna</div>
