assistant-store.html

--- a/assistant-store.html
+++ b/assistant-store.html
@@ -7,7 +7,7 @@
 <a class="side-link" href="index.html">🏠 Главная</a><a class="side-link" href="assistant-store.html">🛍 Assistant Store</a>
 <a class="side-link" href="learning-hub.html">📚 Learning Hub</a><a class="side-link" href="content-lab.html">🎨 Content Lab</a></aside><div class="overlay"></div>
 <div class="container">
-  <div class="section"><h2>🛍 Магазин ассистентов (скоро)</h2>
+  <div class="section"><h2>🛍 Магазин ассистентов </h2>
     <div class="section">
   <h2>🛍 Assistant Store</h2>
   <div class="notice small">Ассистенты на базе ChatGPT. Оплаты подключим позже (Stripe → Apple Pay/PayPal).</div>
