--- a/assistant-store.html
+++ b/assistant-store.html
@@ -1,71 +1,172 @@
-<!doctype html><html lang="ru"><head>
-<meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>🛍 Assistant Store — Compass AI Flow</title>
-<link rel="stylesheet" href="assets/styles.css"/></head><body>
-<div class="header"><div class="header-inner"><button class="burger">☰</button><div class="logo"><img src="assets/logo.svg"/></div></div></div>
-<div class="bokeh"></div><aside class="sidebar"><div class="side-title">Навигация</div>
-<a class="side-link" href="index.html">🏠 Главная</a><a class="side-link" href="assistant-store.html">🛍 Assistant Store</a>
-<a class="side-link" href="learning-hub.html">📚 Learning Hub</a><a class="side-link" href="content-lab.html">🎨 Content Lab</a></aside><div class="overlay"></div>
-<div class="container">
-  <div class="section"><h2>🛍 Магазин ассистентов </h2>
+<!doctype html>
+<html lang="ru">
+<head>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <title>🛍 Assistant Store — Compass AI Flow</title>
+  <link rel="stylesheet" href="assets/styles.css"/>
+  <style>
+    /* Небольшие локальные штрихи */
+    .store .card .actions{margin-top:12px}
+    .price{opacity:.9;font-weight:600;margin-left:auto}
+  </style>
+</head>
+<body>
+  <!-- Шапка и меню -->
+  <div class="header"><div class="header-inner">
+    <button class="burger" aria-label="menu">☰</button>
+    <div class="logo"><img src="assets/logo.svg" alt="Compass AI Flow"/></div>
+  </div></div>
+  <div class="bokeh"></div>
+  <aside class="sidebar">
+    <div class="side-title">Навигация</div>
+    <a class="side-link" href="index.html">🏠 Главная</a>
+    <a class="side-link" href="assistant-store.html">🛍 Assistant Store</a>
+    <a class="side-link" href="learning-hub.html">📚 Learning Hub</a>
+    <a class="side-link" href="content-lab.html">🎨 Content Lab</a>
+  </aside>
+  <div class="overlay"></div>
+
+  <div class="container store">
     <div class="section">
-  
-  <div class="notice small">Ассистенты на базе ChatGPT. Оплаты подключим позже (Stripe → Apple Pay/PayPal).</div>
-
-  <div class="grid">
-    <!-- Ассистент-переводчик -->
-    <div class="card">
-      <img class="logo" src="https://www.google.com/s2/favicons?domain=chatgpt.com&sz=64" alt="ChatGPT">
-      <h3>Ассистент-переводчик</h3>
-      <p>Перевод на нативный английский (UK/US) и украинский: сохраняет стиль, правит лексику и тон.</p>
-      <div class="meta">
-        <span class="tag free">🎁 Бесплатно</span>
-        <span class="tag">🌐 ChatGPT</span>
+      <h2>🛍 Assistant Store</h2>
+      <div class="notice small">
+        Ассистенты на базе ChatGPT. Онлайн-оплату подключим позже (Stripe → Apple Pay / Google Pay / PayPal).
       </div>
-      <div class="actions">
-        <a class="btn primary"
-           href="https://chatgpt.com/g/g-68a1bb11ce248191bac060fa37528a66-assistent-perevodchik"
-           target="_blank" rel="noopener">Открыть →</a>
+
+      <div class="grid">
+        <!-- Ассистент-переводчик -->
+        <div class="card">
+          <img class="logo" src="https://www.google.com/s2/favicons?domain=chatgpt.com&sz=64" alt="ChatGPT">
+          <h3>Ассистент-переводчик</h3>
+          <p>Перевод на нативный английский (UK/US) и украинский: сохраняет стиль, правит лексику и тон.</p>
+          <div class="meta">
+            <span class="tag free">🎁 Бесплатно (демо)</span>
+            <span class="tag">🌐 ChatGPT</span>
+          </div>
+          <div class="actions">
+            <button class="btn primary buy-btn"
+              data-title="Ассистент-переводчик" data-price="9.00">Купить</button>
+            <span class="price">$5</span>
+          </div>
+        </div>
+
+        <!-- Veo 3 – Prompt -->
+        <div class="card">
+          <img class="logo" src="https://www.google.com/s2/favicons?domain=chatgpt.com&sz=64" alt="ChatGPT">
+          <h3>Veo 3 – Prompt</h3>
+          <p>Создаёт идеальный промпт для твоих видео в Veo 3. Использует поиск, холст и генерацию изображений.</p>
+          <div class="meta">
+            <span class="tag free">🎁 Бесплатно (демо)</span>
+            <span class="tag">🌐 ChatGPT</span>
+          </div>
+          <div class="actions">
+            <button class="btn primary buy-btn"
+              data-title="Veo 3 – Prompt" data-price="05.00">Купить</button>
+            <span class="price">$5</span>
+          </div>
+        </div>
       </div>
     </div>
 
-    <!-- Шаблон для следующих ассистентов (скопируй и замени поля) -->
-    <!--
-    <div class="card">
-      <img class="logo" src="https://www.google.com/s2/favicons?domain=chatgpt.com&sz=64" alt="ChatGPT">
-      <h3>Название ассистента</h3>
-      <p>Короткое описание: что делает и для кого.</p>
-      <div class="meta">
-        <span class="tag free">🎁 Бесплатно</span>  <!-- или <span class="tag">💵 от $…</span> -->
-        <span class="tag">🌐 ChatGPT</span>
-      </div>
-      <div class="actions">
-        <a class="btn primary" href="ПОЛНАЯ_ССЫЛКА_НА_АССИСТЕНТА" target="_blank" rel="noopener">Открыть →</a>
+    <div class="footer">© 2025 Compass AI Flow — by Anna</div>
+  </div>
+
+  <!-- Модальное окно оплаты (демо) -->
+  <div id="pay-modal" class="modal hidden" role="dialog" aria-modal="true" aria-labelledby="pay-title">
+    <div class="modal-card">
+      <div class="modal-top">
+        <h3 id="pay-title">Оплата ассистента</h3>
+        <button class="icon-btn close-modal" aria-label="Закрыть">✕</button>
       </div>
 
-      <!-- Veo 3 - Prompt -->
-<div class="card">
-  <img class="logo" src="https://www.google.com/s2/favicons?domain=chatgpt.com&sz=64" alt="ChatGPT">
-  <h3>Veo 3 – Prompt</h3>
-  <p>Создаёт идеальный промпт для твоих видео в Veo 3. Использует поиск, холст и генерацию изображений.</p>
-  <div class="meta">
-    <span class="tag free">🎁 Бесплатно</span>
-    <span class="tag">🌐 ChatGPT</span>
-  </div>
-  <div class="actions">
-    <a class="btn primary"
-       href="https://chatgpt.com/g/g-685cdafc71548191bd61570b7bcbbfec-veo-3-prompt"
-       target="_blank" rel="noopener">Открыть →</a>
-  </div>
-    
+      <div class="modal-body">
+        <div class="modal-line"><span class="label">Продукт</span><span id="pay-product">—</span></div>
+        <div class="modal-line"><span class="label">Цена</span><span id="pay-amount">$0</span></div>
+
+        <label class="field">
+          <span>Email (получить доступ):</span>
+          <input id="pay-email" type="email" placeholder="you@email.com" required>
+        </label>
+
+        <div class="pay-methods">
+          <button class="btn wide" disabled> Apple Pay (скоро)</button>
+          <button class="btn wide" disabled>G Pay (скоро)</button>
+          <button class="btn wide" disabled>PayPal (скоро)</button>
+          <button class="btn primary wide" id="pay-demo">Оформить (демо)</button>
+        </div>
+
+        <div class="tiny muted">Демо-режим: оплата не списывается. Интеграция Stripe Checkout будет подключена позже.</div>
+      </div>
     </div>
-    
-    -->
   </div>
-</div>
-    <div class="notice small">Подключим Stripe Checkout → Apple Pay/Google Pay и PayPal. После оплаты — авто-выдача ссылки/файла.</div>
-  </div>
-  <div class="footer">© 2025 Compass AI Flow — by Anna</div>
-</div>
-<script src="app.js"></script>
-</body></html>
+
+  <script src="app.js"></script>
+</body>
+</html>
+
+/* ===== Modal (payment) ===== */
+.modal{position:fixed;inset:0;display:flex;align-items:center;justify-content:center;
+  background:rgba(0,0,0,.55);backdrop-filter:blur(4px);z-index:1000}
+.modal.hidden{display:none}
+.modal-card{width:min(520px,92vw);background:rgba(19,23,33,.98);border:1px solid rgba(255,255,255,.12);
+  border-radius:16px;box-shadow:0 20px 60px rgba(0,0,0,.4);padding:16px 16px 18px}
+.modal-top{display:flex;align-items:center;justify-content:space-between;margin-bottom:8px}
+.modal-top h3{margin:0}
+.icon-btn{background:transparent;border:1px solid rgba(255,255,255,.14);border-radius:10px;padding:6px 10px;color:#fff}
+.modal-body{display:grid;gap:12px}
+.modal-line{display:flex;justify-content:space-between;gap:10px;padding:8px 10px;
+  background:rgba(255,255,255,.04);border:1px solid rgba(255,255,255,.08);border-radius:10px}
+.modal-line .label{opacity:.7}
+.field{display:grid;gap:6px}
+.field input{background:rgba(255,255,255,.06);border:1px solid rgba(255,255,255,.12);
+  border-radius:10px;padding:10px 12px;color:#fff}
+.pay-methods{display:grid;gap:8px;margin-top:4px}
+.btn.wide{width:100%;text-align:center}
+.tiny{font-size:12px}
+.muted{opacity:.75}
+// ===== Assistant Store: payment modal (demo) =====
+(function(){
+  const modal = document.getElementById('pay-modal');
+  if(!modal) return;
+
+  const productEl = document.getElementById('pay-product');
+  const amountEl  = document.getElementById('pay-amount');
+  const emailEl   = document.getElementById('pay-email');
+  const closeBtn  = modal.querySelector('.close-modal');
+  const demoBtn   = document.getElementById('pay-demo');
+
+  // Открыть модалку по клику "Купить"
+  document.addEventListener('click', (e)=>{
+    const btn = e.target.closest('.buy-btn');
+    if(!btn) return;
+    const title = btn.dataset.title || 'Ассистент';
+    const price = btn.dataset.price || '0.00';
+    productEl.textContent = title;
+    amountEl.textContent  = `$${price}`;
+    emailEl.value = '';
+    modal.classList.remove('hidden');
+  });
+
+  // Закрыть
+  closeBtn.addEventListener('click', ()=> modal.classList.add('hidden'));
+  modal.addEventListener('click', (e)=>{ if(e.target === modal) modal.classList.add('hidden'); });
+
+  // Демо-оформление
+  demoBtn.addEventListener('click', ()=>{
+    if(!emailEl.value.trim()){
+      emailEl.focus();
+      emailEl.reportValidity?.();
+      return;
+    }
+    // Имитация успешной оплаты
+    demoBtn.disabled = true;
+    demoBtn.textContent = 'Обрабатываем…';
+    setTimeout(()=>{
+      demoBtn.disabled = false;
+      demoBtn.textContent = 'Оформить (демо)';
+      modal.classList.add('hidden');
+      alert('Готово! На почту придёт доступ к ассистенту (демо).');
+    }, 900);
+  });
+})();
