assistant-store.html

--- a/assistant-store.html
+++ b/assistant-store.html
@@ -45,11 +45,9 @@
             <span class="tag">🌐 ChatGPT</span>
           </div>
           <div class="actions">
-            <button class="btn primary buy-btn"
-              data-title="Ассистент-переводчик" data-price="9.00">Купить</button>
-            <span class="price">$5</span>
-          </div>
-        </div>
+  <button class="btn primary buy-btn"
+    data-title="Ассистент-переводчик" data-price="5.00">Купить — $5</button>
+</div>
 
         <!-- Veo 3 – Prompt -->
         <div class="card">
@@ -61,13 +59,12 @@
             <span class="tag">🌐 ChatGPT</span>
           </div>
           <div class="actions">
-            <button class="btn primary buy-btn"
-              data-title="Veo 3 – Prompt" data-price="05.00">Купить</button>
-            <span class="price">$5</span>
-          </div>
-        </div>
+  <button class="btn primary buy-btn"
+    data-title="Veo 3 – Prompt" data-price="12.00">Купить — $12</button>
+</div>
       </div>
     </div>
+        
 
     <div class="footer">© 2025 Compass AI Flow — by Anna</div>
   </div>
